# license-generator

./: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflows/: release.yml
src/: helpers.rs  license.rs  main.rs
