[package]
name = "license_generator"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nexxeln/license-generator/"
description = "A very easy-to-use and fast command line license generator!"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.0"
serde = {version = "1.0", features = ["derive"]}
ureq = {version = "*", features = ["json"]}
