[package]
name = "gen-license"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/nexxeln/license-generator/"
description = "A very easy-to-use and fast command line license generator!"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dialoguer = {version = "0.10.0", features = ["fuzzy-select"]}
serde = {version = "1.0", features = ["derive"]}
ureq = {version = "2.4.0", features = ["json"]}
